@@ -31,13 +31,25 @@ struct partial_symtab;
 struct psymbol_bcache;
 
 /* An instance of this class manages the partial symbol tables and
-   partial symbols for a given objfile.  */
+   partial symbols for a given objfile.
+
+   The core psymtab functions -- those in psymtab.c -- arrange for all
+   psymtab- and psymbol-related allocations to happen either in the
+   psymtab_storage object (either on its obstack or in other memory
+   managed by this class), or on the per-BFD object.  In particular
+   the core psymtab code will not make links from the psymtab_storage
+   object back to the objfile (or objfile_obstack).
+
+   However, it is up to each symbol reader to maintain this invariant
+   itself, if it wants to reuse psymtabs across multiple objfiles.
+   The main issue here is ensuring that read_symtab_private does not
+   point into objfile_obstack.  */
 
 class psymtab_storage
 {
 public:
 
-  explicit psymtab_storage (struct objfile *objfile);
+  explicit psymtab_storage ();
 
   ~psymtab_storage ();
 
@@ -60,7 +72,9 @@ public:
 
   struct obstack *obstack ()
   {
-    return m_obstack;
+    if (!m_obstack.has_value ())
+      m_obstack.emplace ();
+    return &*m_obstack;
   }
 
   /* Allocate storage for the "dependencies" field of a psymtab.
@@ -108,9 +122,10 @@ private:
 
   struct partial_symtab *free_psymtabs = nullptr;
 
-  /* The obstack where allocations are made.  */
+  /* The obstack where allocations are made.  This is lazily allocated
+     so that we don't waste memory when there are no psymtabs.  */
 
-  struct obstack *m_obstack;
+  gdb::optional<auto_obstack> m_obstack;
 };
 
 
